plugins/editorconfig/testData/org/editorconfig/language/parser/valid/complexSection.editorconfig
[[hf]ell{e, er, err}[opq][asd].foo]
