plugins/editorconfig/testData/org/editorconfig/language/parser/invalid/malformedCharclassWithoutStart.editorconfig
[hell]{.kt, .kts}]
key=value
